--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
 .App {
+  margin: 0 auto;
+  max-width: 600px;
   text-align: center;
+
+  &__title {
+    font-size: 3.2rem;
+    margin-top: 24px;
+    margin-bottom: 40px;
+  }
 }
