--- a/src/components/Todo/Todo.module.scss
+++ b/src/components/Todo/Todo.module.scss
@@ -5,10 +5,24 @@
   margin: 15px 0;
   font-size: 1.5rem;
   border-radius: 5px;
-  border: 2px solid #555;
-  color: #112d49;
-  background-color: #fbfef9;
-  cursor: pointer;
+  border: 2px solid rgb(85, 85, 85);
+  color: rgb(17, 45, 73);
+  background-color: rgb(251, 254, 249);
+
+  &__complete {
+    background-color: unset;
+    border-color: rgb(128, 128, 128);
+    color: rgb(128, 128, 128);
+
+    & > .Todo__icon,
+    & > .Todo__delete,
+    & > .Todo__check,
+    & > .Todo__icon:hover,
+    & > .Todo__delete:hover,
+    & > .Todo__check:hover {
+      color: rgb(128, 128, 128);
+    }
+  }
 
   &__text {
     width: 100%;
@@ -19,5 +33,28 @@
     font-size: 2rem;
     margin-right: 10px;
     color: rgb(0, 128, 128);
+  }
+
+  &__delete,
+  &__check {
+    cursor: pointer;
+    color: rgb(211, 211, 211);
+    padding: 0 7px;
+    font-size: 2rem;
+    transition: transform 0.3s;
+  }
+
+  &__delete:hover,
+  &__check:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+  }
+
+  &__delete:hover {
+    color: rgb(255, 0, 0);
+  }
+
+  &__check:hover {
+    color: rgb(0, 128, 0);
   }
 }
